<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LoginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/InnerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/unity_card"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:elevation="3dp">

        <TextView
            android:id="@+id/LoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_top"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/LoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/unity_input"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <EditText
            android:id="@+id/LoginPassword"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/unity_input"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <LinearLayout
            android:id="@+id/SignUpForgotLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/LoginSignup"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/unity_button_minimal"
                android:text="@string/sign_up" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/unity_button_minimal"
                android:text="@string/forgot_password" />
        </LinearLayout>

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/unity_card_actions"
            android:text="@string/login" />

    </LinearLayout>

</LinearLayout>