<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/unity_card"
        android:elevation="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/UserInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_top"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/SettingsUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/SettingsFollowers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_followers" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shared_date" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/UserImage"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/default_user" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hide_shared" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/LogoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/unity_card_actions"
            android:text="@string/logout" />

    </LinearLayout>

</LinearLayout>