<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ExampleCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/unity_card"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:elevation="3dp"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/CardContents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/default_user" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/TrackTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/track_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TrackArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/track_artist"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TrackSharer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingRight="8dp"
                android:text="@string/shared_user" />

            <TextView
                android:id="@+id/TrackShareDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="April 20th 2019" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LikeLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/LikeImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tint="@color/like_red"
                app:srcCompat="@drawable/ic_favorite_black_24dp" />

            <TextView
                android:id="@+id/LikeAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingTop="1dp"
                android:text="0" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ExtraDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/LikeTrackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/unity_action_left"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_favorite_black_24dp" />

        <ImageButton
            android:id="@+id/PlayTrackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/unity_action_right"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_play_arrow_black_24dp" />

    </LinearLayout>

</LinearLayout>